Refactor and enhance codebase with various improvements
- Updated chunk generation logic in embedding.ts to use a regex constant for better readability.
- Improved null checks in converter.ts for URL and buffer conversion functions.
- Enhanced type inference in types.ts for platform detection.
- Modified auth.ts to use 127.0.0.1 instead of localhost for better compatibility.
- Added platform icons for various social media platforms in platform-icons.tsx.
- Updated biome.json to adjust linter rules for the extension directory.
- Cleaned up pnpm-lock.yaml by removing unnecessary dependencies.

--- a/apps/extension/.gitignore
+++ b/apps/extension/.gitignore
@@ -24,3 +24,9 @@ web-ext.config.ts
 *.njsproj
 *.sln
 *.sw?
+.env
+.env.local
+.env.*.local
+.env.test.local
+.env.production.local
+.env.development.local
