--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -28,7 +28,9 @@
     "expo-share-intent": "^5.1.1",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
-    "nativewind": "5.0.0-preview.2",
+    "@tailwindcss/postcss": "^4.1.13",
+    "nativewind": "preview",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -41,8 +43,6 @@
     "react-native-web": "~0.21.2",
     "react-native-worklets": "0.5.1",
     "semver": "^7.7.3",
-    "tailwind-merge": "^3.4.0",
-    "tailwind-variants": "^3.2.2",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
@@ -59,11 +59,6 @@
       "reactNativeDirectoryCheck": {
         "listUnknownPackages": false
       }
-    }
-  },
-  "pnpm": {
-    "overrides": {
-      "lightningcss": "1.30.1"
     }
   }
 }
