--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "pnpm": {
     "overrides": {
       "react": "19.1.0",
-      "react-dom": "19.1.0"
+      "react-dom": "19.1.0",
+      "lightningcss": "1.30.1"
     }
   },
-  "name": "with-react-native-web",
+  "name": "mindpocket-monorepo",
   "packageManager": "pnpm@10.9.0"
 }
