--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -8,7 +8,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@ai-sdk/react": "^3.0.70",
@@ -28,6 +29,7 @@
     "expo-share-intent": "^5.1.1",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
+    "patch-package": "^8.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
