--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@rive-app/react-webgl2": "^4.26.2",
+    "@sparticuz/chromium": "^143.0.4",
     "@streamdown/cjk": "^1.0.1",
     "@streamdown/code": "^1.0.1",
     "@streamdown/math": "^1.0.1",
@@ -45,6 +46,7 @@
     "nanoid": "^5.1.6",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "puppeteer-core": "^24.37.2",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-day-picker": "^9.13.0",
