--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "overrides": {
       "react": "19.1.0",
       "react-dom": "19.1.0",
+      "@types/react": "19.2.13",
+      "@types/react-dom": "19.2.3",
       "lightningcss": "1.30.1"
     }
   },
