feat: add Bilibili credentials management and subtitle extraction functionality
- Create `bilibili_credentials` table to store user credentials securely.
- Implement CRUD operations for Bilibili credentials in the database.
- Add API endpoints for managing Bilibili credentials.
- Integrate subtitle extraction from Bilibili videos into the bookmarking system.
- Document the new functionality and usage instructions in `BILIBILI_SUBTITLES.md`.
- Ensure sensitive data is encrypted and handled securely.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "tsx scripts/ensure-extensions.ts && drizzle-kit push --force && next build",
+    "build-without-db": "next build",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
