Declare DATABASE_URL in build task
Added 'env' variable declaration for the build task.

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,8 @@
     "build": {
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "env": ["DATABASE_URL"]  // <--- 关键：在这里声明变量
     },
     "dev": {
       "cache": false,
